<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainAct">

    <com.google.ar.sceneform.SceneView
            android:id="@+id/sceneView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:useDefaultMargins="true"
            android:columnCount="2"
            android:rowCount="2">
            <Button
                android:id="@+id/colorButton"
                android:text="@string/set_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"/>
            <Button
                android:id="@+id/metallicButton"
                android:text="@string/set_metallic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"/>
            <Button
                android:id="@+id/roughnessButton"
                android:text="@string/set_roughness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"/>
            <Button
                android:id="@+id/normalButton"
                android:text="@string/set_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"/>
        </GridLayout>
        <Button
            android:id="@+id/resetMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_material_text"/>
        <Button
            android:id="@+id/changeModelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_model_text"/>
    </LinearLayout>

</LinearLayout>